# devrig.dev

./: .gitignore  .idew.yaml  BUILD.bazel  README.md  TODO  WORKSPACE  devrig  devrig.bat  devrig.ps1  specs.md
.github/workflows/: bootstrap.yml  go.yml  release.yml  website.yml
bootstrap/: bootstrap_test.go  devrig  devrig.bat  devrig.ps1  specs.md  test-devrig-bootstrap.sh  test-with-docker-sandbox.sh
cli/: .gitignore  CLAUDE.md  Dockerfile  build-in-docker-binary.sh  build-in-docker-sandbox.sh  build.sh  go.mod  go.sum  main.go  version.go  version_test.go
cli/bootstrap/: bootstrap-resources_test.go  bootstrap.go  bootstrap_test.go  devrig  devrig-example.yaml  devrig.bat  devrig.ps1  go.mod  specs.md
cli/cmd/: help.go  root.go  run.go  version.go  version_test.go
cli/config/: config.go  config_api.go  config_path.go  config_path_test.go  config_test.go
cli/configservice/: binaries_service.go  binaries_service_test.go  config-service.go  config-service_test.go  types.go
cli/feed/: feed.go  feed_download.go  feed_integration_disabled.go  feed_integration_test.go  feed_os_arch.go  feed_remote.go  feed_to_string.go  feed_urls.go  ide_download.go
cli/feed_api/: feed_api.go
crypto/: README.md
feed-research/: decode-feed.sh
junie-cage/: .gitignore  README.md  settings.gradle.kts  start-ide.sh
release-process/: README-SSH-SIGN.md  README.md  specs.md  ssh-sign.sh  sync-release.sh  test-ssh-sign.sh
website/: .gitignore  README.md  build.sh  dev.sh  docker-compose.dev.yml  hugo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
(+79 files in other folders)
