load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@bazel_gazelle//:def.bzl", "gazelle")

# Gazelle configuration
gazelle(name = "gazelle")

# Binary build configuration
go_binary(
    name = "jbcli",
    embed = [":cli_lib"],
    pure = "on",  # Enable static linking
    static = "on",
    gc_linkopts = [
        "-w",  # Omit DWARF symbol table
        "-s",  # Omit symbol table and debug information
    ],
    visibility = ["//visibility:public"],
)

# Library target for the CLI code
go_library(
    name = "cli_lib",
    srcs = [
        "cli/cmd/version.go",
        # Add other Go source files here
    ],
    importpath = "github.com/jonnyzzz/jbcli",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

# Platform-specific build targets
[go_binary(
    name = "jbcli_%s_%s" % (os, arch),
    embed = [":cli_lib"],
    pure = "on",
    static = "on",
    gc_linkopts = [
        "-w",
        "-s",
    ],
    goos = os,
    goarch = arch,
) for os in [
    "linux",
    "darwin",
    "windows",
] for arch in [
    "amd64",
    "arm64",
]]
